--- a/contacts.html
+++ b/contacts.html
@@ -120,7 +120,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 col-sm-6 col-p">
+                                <!-- <div class="col-lg-3 col-sm-6 col-p">
                                     <div class="contacts d-flex align-items-center">
                                         <div><img src="./images/user.jpg" alt="avatar" class="avatar"></div>
                                         <div class="details">
@@ -128,7 +128,7 @@
                                             <p>Lorem Ipsum Dorem</p>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="col-lg-3 col-sm-6 col-p">
                                     <div class="contacts d-flex align-items-center">
                                         <div><img src="./images/user.jpg" alt="avatar" class="avatar"></div>
