--- a/dashboard.html
+++ b/dashboard.html
@@ -49,14 +49,14 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4 col-sm-6 p-box">
+                                    <!-- <div class="col-lg-4 col-sm-6 p-box">
                                         <div class="c-box">
                                             <div class="box-content">
                                                 <h2>Template name</h2>
                                                 <p>Lorem Ipsum Dorem</p>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="col-lg-4 col-sm-6 p-box">
                                         <div class="c-box">
                                             <div class="box-content">
