--- a/history.html
+++ b/history.html
@@ -68,10 +68,10 @@
                                             <span><img src="./images/user.jpg" class="u-img" alt="user"></span>
                                             <span class="titile">Desiree Borer</span>
                                         </small>
-                                        <small class="h-info">
+                                        <!-- <small class="h-info">
                                             <span><img src="./images/user.jpg" class="u-img" alt="user"></span>
                                             <span class="titile">Desiree Borer</span>
-                                        </small>
+                                        </small> -->
                                     </div>
                                     <div class="detail align-items-center">
                                         <h2>Lorem Ipsum Dorem</h2>
